--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-node_modules
-frontend/node_modules
-backend/node_modules
-.env
+# Node modules
+backend/node_modules/
+frontend/node_modules/
+
+# Logs
+*.log
+
+# Environment variables
+backend/.env
+frontend/.env
+
+# Build files
+frontend/dist/
+frontend/build/
+
+# System files
 .DS_Store
